<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/TNameAbout"
        style="@style/TitleText"
        android:text="@string/AboutAppButton" />

    <Button
        android:id="@+id/ButtSwitchToMain_A"
        android:layout_marginTop="700sp"
        android:onClick="buttSwitchToDesiredA"
        android:text="Назад"
        style="@style/LayerSwitchButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35sp"
        android:layout_marginTop="260sp"
        android:fontFamily="@font/fira_sans_semibold"
        android:text="@string/info_app"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textView"
        style="@style/ButtonConnect"
        android:layout_marginTop="325dp"
        android:text="@string/buttonGitHub"
        android:onClick="gitLink"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/ButtonConnect"
        android:layout_marginTop="370dp"
        android:text="@string/buttonFeedback"
        android:onClick="tgLink"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="122dp"
        app:srcCompat="@drawable/icon_app" />

</RelativeLayout>